Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-4694

ct_archive() does not handle return value of llapi_hsm_action_get_fd() correctly.

XMLWordPrintable

    • 3
    • 12904

      errno migh be zero when llapi_hsm_action_get_fd() returns a failure. ct_archive() does not handle it correctly, which might cause HSM take the operation as successful even if it actually fails.

            jamesanunez James Nunez (Inactive)
            lixi Li Xi (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: